feat: set up cli tools

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Gutenberg metadata extractor",
   "main": "lib/index.js",
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "build": "tsc -p ."
+  },
   "keywords": [
     "metadata extractor"
   ],
@@ -10,12 +14,15 @@
   "author": "Kator James <kator95@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/clear": "^0.1.0",
     "@types/node": "^14.0.14",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "clear": "^0.1.0",
+    "commander": "^5.1.0",
     "dotenv": "^8.2.0",
     "pg": "^8.2.1",
     "typeorm": "^0.2.25"
