--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/clear": "^0.1.0",
     "@types/node": "^14.0.14",
+    "@types/xml2js": "^0.4.5",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
@@ -25,6 +26,7 @@
     "commander": "^5.1.0",
     "dotenv": "^8.2.0",
     "pg": "^8.2.1",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "xml2js": "^0.4.23"
   }
 }
