--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "nyc --reporter=text mocha -r ts-node/register tests/**/*.spec.ts"
   },
   "keywords": [
     "metadata extractor"
@@ -14,9 +15,14 @@
   "author": "Kator James <kator95@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/clear": "^0.1.0",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.14",
     "@types/xml2js": "^0.4.5",
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1",
+    "nyc": "^15.1.0",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
